--- a/Unidad05/nbproject/project.properties
+++ b/Unidad05/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/Unidad05
 excludes=
 file.reference.ConsolaDAW.jar=E:\\Programaci\u00f3n\\ConsolaDAW.jar
 file.reference.ConsolaDAW.jar-1=/media/usuario/Abel3.0/Programaci\u00f3n/ConsolaDAW.jar
+file.reference.ConsolaDAW.jar-2=D:\\Descargas\\ConsolaDAW.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ConsolaDAW.jar}:\
-    ${file.reference.ConsolaDAW.jar-1}
+    ${file.reference.ConsolaDAW.jar-1}:\
+    ${file.reference.ConsolaDAW.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
