--- a/Unidad05/nbproject/private/private.properties
+++ b/Unidad05/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/usuario/snap/netbeans/74/build.properties
+user.properties.file=C:\\Users\\abelm\\AppData\\Roaming\\NetBeans\\15\\build.properties
