--- a/ProyectoJPAVentana/nbproject/project.properties
+++ b/ProyectoJPAVentana/nbproject/project.properties
@@ -34,24 +34,43 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoJPAVentana
 excludes=
 file.reference.antlr-2.7.7.jar=/home/usuario/Descargas/JPA/jars/antlr-2.7.7.jar
+file.reference.antlr-2.7.7.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\antlr-2.7.7.jar
 file.reference.byte-buddy-1.9.10.jar=/home/usuario/Descargas/JPA/jars/byte-buddy-1.9.10.jar
+file.reference.byte-buddy-1.9.10.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\byte-buddy-1.9.10.jar
 file.reference.classmate-1.3.4.jar=/home/usuario/Descargas/JPA/jars/classmate-1.3.4.jar
+file.reference.classmate-1.3.4.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\classmate-1.3.4.jar
 file.reference.dom4j-2.1.1.jar=/home/usuario/Descargas/JPA/jars/dom4j-2.1.1.jar
+file.reference.dom4j-2.1.1.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\dom4j-2.1.1.jar
 file.reference.FastInfoset-1.2.15.jar=/home/usuario/Descargas/JPA/jars/FastInfoset-1.2.15.jar
+file.reference.FastInfoset-1.2.15.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\FastInfoset-1.2.15.jar
 file.reference.hibernate-commons-annotations-5.1.0.Final.jar=/home/usuario/Descargas/JPA/jars/hibernate-commons-annotations-5.1.0.Final.jar
+file.reference.hibernate-commons-annotations-5.1.0.Final.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\hibernate-commons-annotations-5.1.0.Final.jar
 file.reference.hibernate-core-5.4.2.Final.jar=/home/usuario/Descargas/JPA/jars/hibernate-core-5.4.2.Final.jar
+file.reference.hibernate-core-5.4.2.Final.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\hibernate-core-5.4.2.Final.jar
 file.reference.istack-commons-runtime-3.0.7.jar=/home/usuario/Descargas/JPA/jars/istack-commons-runtime-3.0.7.jar
+file.reference.istack-commons-runtime-3.0.7.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\istack-commons-runtime-3.0.7.jar
 file.reference.jandex-2.0.5.Final.jar=/home/usuario/Descargas/JPA/jars/jandex-2.0.5.Final.jar
+file.reference.jandex-2.0.5.Final.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\jandex-2.0.5.Final.jar
 file.reference.javassist-3.24.0-GA.jar=/home/usuario/Descargas/JPA/jars/javassist-3.24.0-GA.jar
+file.reference.javassist-3.24.0-GA.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\javassist-3.24.0-GA.jar
 file.reference.javax.activation-api-1.2.0.jar=/home/usuario/Descargas/JPA/jars/javax.activation-api-1.2.0.jar
+file.reference.javax.activation-api-1.2.0.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\javax.activation-api-1.2.0.jar
 file.reference.javax.persistence-api-2.2.jar=/home/usuario/Descargas/JPA/jars/javax.persistence-api-2.2.jar
+file.reference.javax.persistence-api-2.2.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\javax.persistence-api-2.2.jar
 file.reference.jaxb-api-2.3.1.jar=/home/usuario/Descargas/JPA/jars/jaxb-api-2.3.1.jar
+file.reference.jaxb-api-2.3.1.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\jaxb-api-2.3.1.jar
 file.reference.jaxb-runtime-2.3.1.jar=/home/usuario/Descargas/JPA/jars/jaxb-runtime-2.3.1.jar
+file.reference.jaxb-runtime-2.3.1.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\jaxb-runtime-2.3.1.jar
 file.reference.jboss-logging-3.3.2.Final.jar=/home/usuario/Descargas/JPA/jars/jboss-logging-3.3.2.Final.jar
+file.reference.jboss-logging-3.3.2.Final.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\jboss-logging-3.3.2.Final.jar
 file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar=/home/usuario/Descargas/JPA/jars/jboss-transaction-api_1.2_spec-1.1.1.Final.jar
+file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\jboss-transaction-api_1.2_spec-1.1.1.Final.jar
 file.reference.mysql-connector-j-8.0.32.jar=/home/usuario/Descargas/mysql-connector-j-8.0.32.jar
+file.reference.mysql-connector-j-8.0.32.jar-1=D:\\Descargas\\mysql-connector-j-8.0.32.jar
 file.reference.stax-ex-1.8.jar=/home/usuario/Descargas/JPA/jars/stax-ex-1.8.jar
+file.reference.stax-ex-1.8.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\stax-ex-1.8.jar
 file.reference.txw2-2.3.1.jar=/home/usuario/Descargas/JPA/jars/txw2-2.3.1.jar
+file.reference.txw2-2.3.1.jar-1=D:\\Descargas\\JPA\\JPA\\jars\\txw2-2.3.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -73,7 +92,26 @@ javac.classpath=\
     ${file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar}:\
     ${file.reference.stax-ex-1.8.jar}:\
     ${file.reference.txw2-2.3.1.jar}:\
-    ${file.reference.mysql-connector-j-8.0.32.jar}
+    ${file.reference.mysql-connector-j-8.0.32.jar}:\
+    ${file.reference.mysql-connector-j-8.0.32.jar-1}:\
+    ${file.reference.FastInfoset-1.2.15.jar-1}:\
+    ${file.reference.antlr-2.7.7.jar-1}:\
+    ${file.reference.byte-buddy-1.9.10.jar-1}:\
+    ${file.reference.classmate-1.3.4.jar-1}:\
+    ${file.reference.dom4j-2.1.1.jar-1}:\
+    ${file.reference.hibernate-commons-annotations-5.1.0.Final.jar-1}:\
+    ${file.reference.hibernate-core-5.4.2.Final.jar-1}:\
+    ${file.reference.istack-commons-runtime-3.0.7.jar-1}:\
+    ${file.reference.jandex-2.0.5.Final.jar-1}:\
+    ${file.reference.javassist-3.24.0-GA.jar-1}:\
+    ${file.reference.javax.activation-api-1.2.0.jar-1}:\
+    ${file.reference.javax.persistence-api-2.2.jar-1}:\
+    ${file.reference.jaxb-api-2.3.1.jar-1}:\
+    ${file.reference.jaxb-runtime-2.3.1.jar-1}:\
+    ${file.reference.jboss-logging-3.3.2.Final.jar-1}:\
+    ${file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar-1}:\
+    ${file.reference.stax-ex-1.8.jar-1}:\
+    ${file.reference.txw2-2.3.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
