--- a/EjerciciosUnidad4/nbproject/private/private.properties
+++ b/EjerciciosUnidad4/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/usuario/snap/netbeans/74/build.properties
+user.properties.file=/home/usuario/.netbeans/17/build.properties
