Ejercicios Stream PF

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /ProyectoJPAVentana/nbproject/private/
 /ProyectoJPAVentana/build/
 /EjerciciosUnidad4/dist/
+/ClaseImportante/nbproject/private/
+/ClaseImportante/build/
