Correccion de ejercicios de temas pasados

--- a/EjerciciosUnidad2/nbproject/project.properties
+++ b/EjerciciosUnidad2/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.AscensorLib.jar=/media/usuario/Abel 3.0/Programaci\u00f3n/librer\u00edas tema 2/Principiante/Ascensor/AscensorLib.jar
 file.reference.AscensorLib.jar-1=E:\\Programaci\u00f3n\\librer\u00edas tema 2\\Principiante\\Ascensor\\AscensorLib.jar
 file.reference.AscensorLib.jar-2=/media/usuario/Abel 3.0/Programaci\u00f3n/librer\u00edas tema 2/Principiante/Ascensor/AscensorLib.jar
+file.reference.ConsolaDAW.jar=/home/usuario/Descargas/ConsolaDAW.jar
 file.reference.EfectoImagenes.jar=E:\\Programaci\u00f3n\\librer\u00edas tema 2\\Principiante\\dist\\EfectoImagenes.jar
 file.reference.EfectoImagenes.jar-1=/media/usuario/Abel 3.0/Programaci\u00f3n/librer\u00edas tema 2/Principiante/dist/EfectoImagenes.jar
 file.reference.MarioLib.jar=E:\\Programaci\u00f3n\\librer\u00edas tema 2\\Principiante\\Mario Bros\\MarioLib.jar
@@ -71,7 +72,8 @@ javac.classpath=\
     ${file.reference.MusicaLib.jar-1}:\
     ${file.reference.ReproductorMusica.jar-1}:\
     ${file.reference.EfectoImagenes.jar}:\
-    ${file.reference.EfectoImagenes.jar-1}
+    ${file.reference.EfectoImagenes.jar-1}:\
+    ${file.reference.ConsolaDAW.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
