--- a/EjerciciosUnidad3/EjerciciosUnidad3/nbproject/private/private.properties
+++ b/EjerciciosUnidad3/EjerciciosUnidad3/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.ConsolaDAW.jar=E:\\Programaci\u00f3n\\ConsolaDAW.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=/home/usuario/.netbeans/17/build.properties
