--- a/EjerciciosUnidad3/EjerciciosUnidad3/nbproject/project.properties
+++ b/EjerciciosUnidad3/EjerciciosUnidad3/nbproject/project.properties
@@ -37,11 +37,13 @@ endorsed.classpath=
 excludes=
 file.reference.ConsolaDAW.jar=/media/usuario/Abel 3.0/Programaci\u00f3n/ConsolaDAW.jar
 file.reference.ConsolaDAW.jar-1=E:\\Programaci\u00f3n\\ConsolaDAW.jar
+file.reference.ConsolaDAW.jar-2=/home/usuario/Descargas/ConsolaDAW.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ConsolaDAW.jar}:\
-    ${file.reference.ConsolaDAW.jar-1}
+    ${file.reference.ConsolaDAW.jar-1}:\
+    ${file.reference.ConsolaDAW.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
