--- a/EjerciciosUnidad2/nbproject/private/private.properties
+++ b/EjerciciosUnidad2/nbproject/private/private.properties
@@ -12,4 +12,4 @@ file.reference.ReproductorMusica.jar=E:\\Programaci\u00f3n\\librer\u00edas tema 
 file.reference.swing-layout-1.0.4.jar=/media/usuario/Abel 3.0/Programaci\u00f3n/librer\u00edas tema 2/Principiante/Mario Bros/swing-layout-1.0.4.jar
 file.reference.swing-layout-1.0.4.jar-1=E:\\Programaci\u00f3n\\librer\u00edas tema 2\\Principiante\\Mario Bros\\swing-layout-1.0.4.jar
 file.reference.swing-layout-1.0.4.jar-2=/media/usuario/Abel 3.0/Programaci\u00f3n/librer\u00edas tema 2/Principiante/Mario Bros/swing-layout-1.0.4.jar
-user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=/home/usuario/.netbeans/17/build.properties
